Fixed WebApp Params of Day20

--- a/day20/webapp/index.html
+++ b/day20/webapp/index.html
@@ -23,10 +23,10 @@
 <hr>
 
 <form action="index.php" method="post">  
-	<input name="servo_links" id="servo_links" type="submit" value="Pyramide links" style="background-color: #4180C5">		
-	<input name="servo_rechts" id="servo_rechts" type="submit" value="Pyramide rechts" style="background-color: #4180C5">		
-	<input name="lauflicht" id="lauflicht" type="submit" value="Lauflicht" style="background-color: #4180C5">
-	<input name="blinken" id="blinken" type="submit" value="Blinken" style="background-color: #4180C5">
+	<input name="servoCCW" id="servoCCW" type="submit" value="Pyramide links" style="background-color: #4180C5">		
+	<input name="servoCW" id="servoCW" type="submit" value="Pyramide rechts" style="background-color: #4180C5">		
+	<input name="running" id="running" type="submit" value="Lauflicht" style="background-color: #4180C5">
+	<input name="blinking" id="blinking" type="submit" value="Blinken" style="background-color: #4180C5">
 </form>
 </div>
 </body>
